<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.fragments.HomeFragment">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dev Android"
        android:textAllCaps="true"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="@id/homeTitle"
        app:layout_constraintEnd_toEndOf="@id/homeTitle"
        app:layout_constraintTop_toBottomOf="@id/homeTitle"/>

    <TextView
        android:id="@+id/versionCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/versionName"
        app:layout_constraintStart_toStartOf="@id/versionName"
        app:layout_constraintEnd_toEndOf="@id/versionName"/>


</androidx.constraintlayout.widget.ConstraintLayout>