<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".view.fragments.DetailFragment">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layoutAnimation="@anim/layout_animation_slide_from_right"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</FrameLayout>