<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:context=".view.fragments.ProductsFragment"
        android:background="@color/white">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                app:spanCount="2"
                android:background="@color/grey"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>